# How-to-Build-an-AI-Chatbot

./: README.md  answer_questions.py  create_knowledge_base.py  main.py  output.html  output_20230822191122.html  pyproject.toml
data/: in-praise-of-the-gods.md  output_20230822192328.html  output_20230822192357.html  output_20230822192428.html  output_20230822192643.html  output_20230822194804.html  what-is-good-within-social-networks.md
storage/: docstore.json  index_store.json  vector_store.json
templates/: index.html
